Disable cloudfront and fix date on iphone 5.

--- a/app/styles/elements/_header.scss
+++ b/app/styles/elements/_header.scss
@@ -62,7 +62,7 @@
       margin-bottom: 15px;
     }
     &__date {
-      font-size: 16px;
+      font-size: 14px;
       line-height: 46px;
       top: 18px;
       right: 15px;
